# protogen-mlir

./: .gitignore  CMakeLists.txt  FullCompile.cpp  FullCompile.m  MESI.pcc  MI-MLIR.m  MI-STALL.cpp  MI-STALL.m  MI.cpp  MI.m  MI.pcc  MSI.pcc  a.out  fsm.mlir  minimum-murphi.mlir  run-scripts.txt  test-murphi.mlir  test.pcc  workspace.code-workspace
.antlr/: ProtoCCLexer.cpp  ProtoCCLexer.h  ProtoCCLexer.tokens  ProtoCCParser.cpp  ProtoCCParser.h
.github/workflows/: build-and-test.yml
include/: CMakeLists.txt
include/Murphi/: CMakeLists.txt  Dialect.h  ModuleTranslation.h  Murphi.td  MurphiDialect.h  MurphiDialect.td  MurphiOps.h  MurphiOps.td  Ops.h  Ops.td  Types.h  Types.td
include/PCC/: CmakeLists.txt  Dialect.h  Ops.h  Ops.td  PCC.td  PCCDialect.h  PCCDialect.td  PCCOps.h  PCCOps.td  PCCTypes.td  Types.h  Types.td
include/Passes/: CMakeLists.txt
include/utils/: murphiUtils.h  stateUtils.h
lib/: CMakeLists.txt
lib/Murphi/: CMakeLists.txt  Dialect.cpp  (+4 more)
lib/Passes/: AddTransientStatePass.cpp  CMakeLists.txt  ConverPCCToMuphi.cpp  ConvertPCCToMuphi.cpp  ConvertPCCToMurphi.cpp  MutexReleasePass.cpp  Pipeline.cpp  ProtogenOptimizationPass.cpp
murphi-opt/: CMakeLists.txt  ProtoCC.g4  ProtoCCMLIRVisitor.h  mlirGen.cpp  mlirGen.h  murphi-opt.cpp
murphi-opt/.antlr/: ProtoCC.interp  ProtoCCLexer.cpp  ProtoCCLexer.h  ProtoCCLexer.interp  ProtoCCParser.cpp  ProtoCCParser.h
murphi-translate/: CMakeLists.txt  murphi-translate.cpp
pcc-translate/: CMakeLists.txt  ProtoCC.g4  TranslatePCCToMLIR.cpp  TranslatePCCToMLIR.h  mlirGen.cpp  mlirGen.h  pcc-translate.cpp
pcc-translate/.antlr/: ProtoCC.interp  ProtoCCLexer.cpp  ProtoCCLexer.h  ProtoCCParser.cpp  ProtoCCParser.h
samples/: pcc.mlir  sample.mlir
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
(+12 files in other folders)
